--- a/app_version.json
+++ b/app_version.json
@@ -2,9 +2,9 @@
   "customer": {
     "version": "1.0.1",
     "title": "Update 1.0.1",
-    "is_forced": false,
-    "description": "",
-    "update_url": ""
+    "is_forced": true,
+    "description": "<div>Perubahan:</div><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul>",
+    "update_url": "https://play.google.com/store/apps/details?id=com.gojek.app&hl=id"
   }, 
   "driver": {
     "version": "1.0.0",
