--- a/app_version.json
+++ b/app_version.json
@@ -9,7 +9,7 @@
   "driver": {
     "version": "1.0.1",
     "title": "Update 1.0.1",
-    "is_forced": true,
+    "is_forced": false,
     "description": "<p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><p><b>Perubahan:<\b></p><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul>",
     "update_url": "https://play.google.com/store/apps/details?id=com.gojek.app&hl=id"
   }
